# cmake-skeleton

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  exampleclass.cpp  exampleclass.h  testclass.cpp  testclass.h
tests/: CMakeLists.txt  testclasstest.cpp  testclasstest.h
